--- a/index.html
+++ b/index.html
@@ -547,7 +547,8 @@
                     <div class="timeline-year">2022</div>
                     <div class="timeline-content">
                         <ul>
-                            <li>Wrote <strong>Drunk Off Her</strong> and <strong>You and the Moon</strong></li>
+                            <li>Wrote <strong>Drunk Off Her</strong></li>
+                            <li>Wrote <strong>You and the Moon</strong></li>
                         </ul>
                     </div>
                 </div>
