--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
     <script>
     const books = [
         { title: "Garden of Grief", href: "pdfs/GARDEN OF GRIEF.pdf", imgSrc: "GOG.jpeg", alt: "Garden of Grief - A Collection of Poems by Iron Heist" },
-        { title: "A Diary of My Thoughts", href: "pdfs/A Diary of MY thoughts.pdf", imgSrc: "A Diary of my thoughts.jpeg", alt: "A Diary of My Thoughts - Philosophical Poetry by Iron Heist" },
+        { title: "A Diary of My Thoughts", href: "pdfs/A Diary of MY Thoughts.pdf", imgSrc: "A Diary of my thoughts.jpeg", alt: "A Diary of My Thoughts - Philosophical Poetry by Iron Heist" },
         { title: "Midday Blues", href: "pdfs/Midday Blues.pdf", imgSrc: "Midday Blues.jpeg", alt: "Midday Blues - Emotional Poetry by Iron Heist" },
         { title: "Fading Light?", href: "pdfs/Fading Light.pdf", imgSrc: "Fading Light.jpeg", alt: "Fading Light? - Philosophical Poetry by Iron Heist" },
         { title: "Dawn & Dusk", href: "pdfs/Dawn and Dusk.pdf", imgSrc: "Dawn & Dusk.jpeg", alt: "Dawn & Dusk - Reflective Poetry by Iron Heist" },
